<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneyXX</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <color name="green">#318480</color>
    <color name="blank">#FFFFFF</color>
    <color name="pastelGreen">#d7eaca</color>

    <string name="button_Wallet">Wallet</string>
    <string name="button_Jackpot">Jackpot</string>
    <string name="button_Send">Send Money</string>
    <string name="button_Beg">Beg Money</string>
    <string name="button_MyAccount">My Account</string>
    <string name="title_activity_seng_beg">SengBegActivity</string>
    <string name="title_activity_jackpot">JackpotActivity</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="title_activity_jackpot_form">JackpotFormActivity</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="title_activity_sign_up">Sign_upActivity</string>
    <string name="error_signup">You need to complete the required field to continue</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_settings_tab">SettingsTabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_bank_settings_fragment">BankSettingsFragment</string>
    <string name="title_activity_transfer_recharge">TransferRechargeActivity</string>
    <string name="title_activity_historic">HistoricActivity</string>
    <string name="title_activity_jackpot_project">JackpotProjectActivity</string>

</resources>
