<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="Dispay the account basic settings (name, solde, dates)" />
    
    <Button
        android:id="@+id/button_Send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="32dp"
        android:onClick="onClick"
        android:text="@string/button_Send" />

    <Button
        android:id="@+id/button_Beg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_Send"
        android:layout_marginTop="28dp"
        android:onClick="onClick"
        android:text="@string/button_Beg" />

    <Button
        android:id="@+id/button_Jackpot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_Beg"
        android:layout_marginTop="26dp"
        android:onClick="onClick"
        android:text="@string/button_Jackpot" />

    <Button
        android:id="@+id/button_Wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_Jackpot"
        android:layout_marginTop="25dp"
        android:text="@string/button_Wallet" />

    <Button
        android:id="@+id/button_MyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_Wallet"
        android:layout_marginTop="18dp"
        android:text="@string/button_MyAccount" />

</RelativeLayout>